test/src/e2e_vm_tests/test_programs/should_pass/language/use_full_path_names/src/foo.sw
library;

pub struct Foo {
    pub foo: u32,
}
