test/src/e2e_vm_tests/test_programs/should_fail/dependency_parsing_error/src/a_dependency.sw
library foo;
dep bar;
dep inner/bar;
pub struct Foo { foo: str[3] } 
